HOUSNAV-89: fixing images from getting cut off in printing

--- a/packages/ui/src/modal-building-code-content/ModalBuildingCodeContent.css
+++ b/packages/ui/src/modal-building-code-content/ModalBuildingCodeContent.css
@@ -80,6 +80,10 @@
     border: none !important;
   }
 
+  .ui-ModalSide--Image {
+    margin: 0;
+  }
+
   .ui-ModalSide--ArticleContent,
   .--glossary .ui-ModalSide--Article {
     padding-left: 0;
